--- a/composer.json
+++ b/composer.json
@@ -1,3 +1,27 @@
 {
-	
+	"name": "barranco/magento2-architecture",
+    "description": "A module to illustrate Magento 2 Architecture to cover topics related to the certification exam",
+    "require":{
+        "php": "~7.1.3||~7.2.0"
+    },
+    "type": "magento2-module",
+    "version": "1.0.0",
+    "license": [
+        "MIT"
+    ],
+    "authors": [
+    {
+        "name": "Tadeo Barranco",
+        "email": "tbarrancoa@gmail.com",
+        "homepage": "http://www.tadeobarranco.com/"
+    }
+    ],
+    "autoload": {
+        "files": [
+          "registration.php"
+        ],
+        "psr-4": {
+          "Barranco\\EasyModule\\": ""
+        }
+    }
 }
